@@ -1,6 +1,9 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002004
+ [Added / runtime requires]
+ - Path::ScanINC
+ - Path::Tiny
 
 0.002003 2014-10-31T15:02:11Z
  [Added / configure requires]
