@@ -1,6 +1,9 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002004
+ [Added / runtime recommends]
+ - Path::Tiny 0.058
+
  [Changed / test recommends]
  - Test::More 1.001008 → 0.99
 
